# totk

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: data_symbols.csv
src/: .clang-tidy
toolchain/: ToolchainNX64.cmake
tools/: config.toml  setup.py
